src/content/docs/ko/sdk/react-native/v4/features/privacy.mdx
---
title: 프라이버시 기능 설정
description: 앱에서 사용자 프라이버시를 관리할 수 있는 기능을 구성합니다.
slug: ko/sdk/react-native/v4/features/privacy
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v5: /ko/sdk/react-native/features/privacy
---

Adjust SDK에는 앱에서 사용자 프라이버시를 관리할 수 있는 기능이 포함되어 있습니다.

## 삭제 요청 전송 {#send-erasure-request}

<CodeBlock title="메서드 서명">

```ts
gdprForgetMe: () => void
```

</CodeBlock>

EU의 개인정보 보호 규정\(GDPR\) 및 유사한 전 세계 개인정보 보호법\(CCPA, LGPD 등\)은 데이터 주체에게 개인 데이터 처리와 관련하여 포괄적인 권리를 부여합니다. 이러한 권리에는 삭제 권리\( [GDPR 17조](https://gdpr.eu/article-17-right-to-be-forgotten/) 참조\)\([1](https://help.adjust.com/ko/article/gdpr#ref-1)\)가 포함됩니다. 데이터 처리자로서 Adjust는 귀하의 \(앱\) 사용자의 이러한 요청을 처리하는 데 있어 귀하\(데이터 컨트롤러\)를 지원할 의무가 있습니다.

`gdprForgetMe` 메서드를 호출하여 사용자의 삭제 요청을 Adjust로 전송할 수 있습니다. Adjust가 알림을 받은 경우:

-  Adjust는 내부 시스템과 데이터베이스에서 해당 사용자의 모든 과거 개인 정보를 영구적으로 삭제합니다.
-  Adjust는 더 이상 Adjust SDK를 통해 해당 사용자/기기로부터 데이터를 수신하지 않습니다.\([2](https://help.adjust.com/ko/article/gdpr#ref-2)\)

```jsx
Adjust.gdprForgetMe();
```

## 특정 사용자에 대한 서드파티 공유 {#third-party-sharing-for-specific-users}

Adjust SDK를 사용하여 사용자의 서드파티 공유 설정 변경 내용을 기록할 수 있습니다. 서드파티 공유 설정은 `AdjustThirdPartySharing` 클래스를 사용하여 구성됩니다.

### AdjustThirdPartySharing 객체 인스턴스화 {#instantiate-an-adjustthirdpartysharing-object}

<CodeBlock title="메서드 서명">

```ts
constructor(isEnabled: boolean)
```

</CodeBlock>

Adjust SDK와의 서드파티 공유를 활성화 또는 비활성화하려면 `AdjustThirdPartySharing` 객체를 인스턴스화해야 합니다. 이 객체에 Adjust의 서드파티 공유 처리 방식을 제어하는 변수가 포함됩니다.

서드파티 공유 객체를 인스턴스화하려면 새로운 `AdjustThirdPartySharing` 인스턴스를 생성하고 다음 파라미터를 전달합니다.

-  `isEnabled` \(`boolean`\): 서드파티 공유의 활성화 여부. `true` 전달로 서드파티 공유 활성화 또는 `false` 전달로 서드파티 공유 비활성화

```jsx
var adjustThirdPartySharing = new AdjustThirdPartySharing(true);
//...
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

<Callout type="note">

`isEnabled` 속성을 `false`로 설정하면 Adjust는 사용자의 데이터를 서드파티와 공유하는 것을 중단합니다. Adjust SDK의 작동에는 문제가 없습니다.

</Callout>

`AdjustThirdPartySharing` 객체를 인스턴스화한 후에 `AdjustThirdPartySharing` 인스턴스를 인수로 `Adjust.trackThirdPartySharing` 메서드를 호출하여 Adjust에 정보를 전송할 수 있습니다.

```jsx
var adjustThirdPartySharing = new AdjustThirdPartySharing(false);
//...
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

### 세분화된 정보 전송 {#send-granular-information}

<CodeBlock title="메서드 서명">

```ts
public addGranularOption(partnerName: string, key: string, value: string): void
```

</CodeBlock>

서드파티 공유 설정 변경 시 세부 정보를 추가할 수 있습니다. 사용자의 결정에 대한 보다 자세한 정보 전달에 본 기능을 사용하시기 바랍니다. 다음 파라미터와 함께 `addGranularOption` 메서드를 호출합니다.

-  `partnerName` \(`string`\): 세분화 옵션을 적용할 파트너의 이름
-  `key` \(`string`\): 옵션 키
-  `value` \(`string`\): 옵션 값

```jsx
var adjustThirdPartySharing = new AdjustThirdPartySharing(null);
//...
adjustThirdPartySharing.addGranularOption("PartnerA", "key", "value");
//...
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

#### Facebook의 제한적 데이터 사용 관리 {#manage-facebook-limited-data-use}

<Callout type="important">

Adjust SDK는 앱이 설치되는 즉시 Facebook으로 정보를 전송합니다. SDK를 초기화하기 **전** 에 해당 메서드를 호출해야 합니다.

</Callout>

Facebook은 CCPA\(California Consumer Privacy Act, 캘리포니아 소비자 프라이버시법\)를 준수하기 위해 LDU\(제한적 데이터 사용\)라는 기능을 제공합니다. 이 기능을 사용하면 캘리포니아 기반의 사용자가 개인 정보의 판매를 옵트아웃 한 경우 Facebook에게 이를 알릴 수 있습니다. 또한 모든 사용자를 옵트아웃으로 기본 설정하고 싶은 경우에도 사용할 수 있습니다.

`addGranularOption` 메서드에 다음 인수를 전달하여 Facebook LDU 상태를 업데이트할 수 있습니다.

| 파라미터                          | 설명                                                                                                                                                                                              |
| --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `partner_name`                    | LDU를 토글하기 위해 `facebook`를 사용하시기 바랍니다.                                                                                                                                             |
| `data_processing_options_country` | 사용자가 위치한 국가.<ul><li>`0`: Facebook이 지리적 위치를 사용하도록 요청.</li><li>`1`: 미국.</li></ul>                                                                                          |
| `data_processing_options_state`   | 사용자가 어느 주에 위치하고 있는지 Facebook에 알림.<ul><li>`0`: Facebook이 지리적 위치를 사용하도록 요청.</li><li>`1000`: 캘리포니아.</li><li>`1001`: 콜로라도</li><li>`1002`: 코네티컷</li></ul> |

<Callout type="note">

이 메서드를 `0` 값으로 `data_processing_options_country` **또는** `data_processing_options_state` 영역에서 호출하면 Adjust SDK가 **양** 필드를 `0`으로 전달합니다.

</Callout>
<CodeBlock highlight="{range: 3-12}">

```jsx
var adjustThirdPartySharing = new AdjustThirdPartySharing(null);
//...
adjustThirdPartySharing.addGranularOption(
   "facebook",
   "data_processing_options_country",
   "1",
);
adjustThirdPartySharing.addGranularOption(
   "facebook",
   "data_processing_options_state",
   "1000",
);
//...
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

</CodeBlock>

#### Google에 동의 데이터 제공\(디지털 시장법 준수\) {#provide-consent-data-to-google-digital-markets-act-compliance}

<Callout type="important">

귀하가 Google 애드 또는 Google 마케팅 플랫폼을 사용하고 사용자가 EEA\(European Economic Area, 유럽 경제 지역\)에 위치한 경우 이러한 옵션을 전달해야 합니다.

</Callout>
<MinorVersion added="v4.26.0">

EU의 DMA\(Digital Markets Act, 디지털 시장법\)에 따라 Google 애드와 Google 마케팅 플랫폼은 API에 대한 Adjust의 어트리뷰션 요청을 수신하기 위해 명시적인 동의를 받아야 합니다. 이 동의를 전달하려면 파트너 `google_dma`에 대한 서드파티 공유 인스턴스에 다음의 세분화된 옵션을 추가해야 합니다.

</MinorVersion>

| Key                  | 값                           | 설명                                                                                                                                                                                                                           |
| -------------------- | ---------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| `eea`                | `1` \(양수\) \| `0` \(음수\) | 앱을 설치하는 사용자가 EEA에 있는지 여부를 Adjust에 알려줍니다.<br />EU 회원국, 스위스, 노르웨이, 아이슬란드, 슬로베니아가 포함됩니다.                                                                                         |
| `ad_personalization` | `1` \(양수\) \| `0` \(음수\) | 사용자가 Google Ads 및 Google Marketing Platform을 통해 맞춤형 광고를 제공받는 데 동의했는지 여부를 Adjust에 알려줍니다.<br />이 파라미터는 또한 Google Marketing Platform을 위해 예약된 `npa` 파라미터에 대해서도 알려줍니다. |
| `ad_user_data`       | `1` \(양수\) \| `0` \(음수\) | 어트리뷰션에 광고주 ID를 사용하는 것에 대한 사용자의 동의 여부를 Adjust에 알려줍니다.                                                                                                                                          |

```jsx
var adjustThirdPartySharing = new AdjustThirdPartySharing(null);
adjustThirdPartySharing.addGranularOption("google_dma", "eea", "1");
adjustThirdPartySharing.addGranularOption(
   "google_dma",
   "ad_personalization",
   "1",
);
adjustThirdPartySharing.addGranularOption("google_dma", "ad_user_data", "1");
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

## 서드파티 공유 비활성화 {#disable-third-party-sharing}

<CodeBlock title="메서드 서명">

```ts
disableThirdPartySharing: () => void
```

</CodeBlock>

모든 사용자의 서드파티 공유를 비활성화하려면 `disableThirdPartySharing` 메서드를 호출합니다. Adjust 서버가 이 정보를 수신하면 Adjust는 해당 사용자의 데이터를 서드파티와 공유하는 것을 중단합니다. Adjust SDK의 작동에는 문제가 없습니다.

```jsx
Adjust.disableThirdPartySharing();
```

### 파트너 공유 설정 업데이트 {#update-partner-settings}

<CodeBlock title="메서드 서명">

```ts
public addPartnerSharingSetting(partnerName: string, key: string, value: boolean): void
```

</CodeBlock>

기본 설정에 따라 Adjust는 앱 설정에서 구성한 모든 파트너와 모든 지표를 공유합니다. Adjust SDK를 사용하여 파트너별 서드파티 공유 설정을 업데이트할 수 있습니다. 이 기능을 토글하려면 다음 인수로 `addPartnerSharingSetting` 메서드를 호출합니다.

| 인수 \(Arguments\) | 데이터 유형 | 설명                                                                                                                                                                  |
| ------------------ | ----------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `partnerName`      | `String`    | 파트너의 이름. [이용 가능한 전체 파트너 목록 다운로드](https://assets.ctfassets.net/5s247im0esyq/5WvsJ7J7fGFUlfsFeGdalj/643651619adc3256acac7885ec60624d/modules.csv) |
| `key`              | `String`    | 파트너와 공유하는 지표                                                                                                                                                |
| `value`            | `Boolean`   | 사용자의 결정                                                                                                                                                         |

`key`를 사용하여 비활성화 또는 재활성화하고자 하는 지표를 지정할 수 있습니다. 모든 지표 공유를 활성화/비활성화하려면 `all` 키를 사용할 수 있습니다. 이용 가능한 지표의 전체 목록은 다음과 같습니다.

<ListColumns>

-  `ad_revenue`
-  `all`
-  `attribution`
-  `update`
-  `att_update`
-  `cost_update`
-  `event`
-  `install`
-  `reattribution`

---

-  `reattribution_reinstall`
-  `reinstall`
-  `rejected_install`
-  `rejected_reattribution`
-  `sdk_click`
-  `sdk_info`
-  `session`
-  `subscription`
-  `uninstall`

</ListColumns>

파트너의 지표에 대해 `false` 값을 설정하면 Adjust는 해당 파트너와의 지표 공유를 중단합니다.

<Callout type="tip">

파트너와 일부 지표만 공유하고자 하는 경우 `all` 키를 `false` 값과 함께 전달하여 모든 공유를 비활성화한 다음 개별 지표를 `true` 값과 함께 전달하여 공유를 제한할 수 있습니다.

</Callout>

#### 예시 {#examples}

특정 파트너와의 모든 지표 공유를 중단하려면 `all` 키를 `false` 값과 함께 전달하시기 바랍니다.

```jsx
var adjustThirdPartySharing = new AdjustThirdPartySharing(null);
adjustThirdPartySharing.addPartnerSharingSetting("PartnerA", "all", false);
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

공유를 다시 활성화하려면 `all` 키를 `true` 값과 함께 전달하시기 바랍니다.

```jsx
var adjustThirdPartySharing = new AdjustThirdPartySharing(null);
adjustThirdPartySharing.addPartnerSharingSetting("PartnerA", "all", true);
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

`addPartnerSharingSetting` 메서드를 서로 다른 키로 여러 번 호출하여 특정 지표의 공유를 중단하거나 시작할 수 있습니다. 예를 들어 이벤트 정보를 파트너에게만 공유하고자 하는 경우 다음을 전달할 수 있습니다.

-  `all` 모든 정보 공유를 비활성화하려면 `false` 값과 함께 전달합니다.
-  `event` 이벤트 공유를 활성화하려면 `true` 값과 함께 전달합니다.

<Callout type="note">

특정 키는 항상 `all` 보다 우선시됩니다. `all` 을 다른 키와 함께 전달하면 개별 키 값이 `all` 설정을 재정의합니다.

</Callout>

```jsx
var adjustThirdPartySharing = new AdjustThirdPartySharing(null);
adjustThirdPartySharing.addPartnerSharingSetting("PartnerA", "all", false);
adjustThirdPartySharing.addPartnerSharingSetting("PartnerA", "event", true);
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

## 데이터 레지던시 {#data-residency}

<CodeBlock title="메서드 서명">

```ts
public setUrlStrategy(urlStrategy: UrlStrategy): void
```

</CodeBlock>

URL 전략 기능을 사용하여 다음을 설정할 수 있습니다.

-  Adjust가 귀하의 데이터를 저장하는 국가\(데이터 레지던시\).
-  Adjust SDK가 트래픽을 전송하는 엔드포인트\(URL 전략\).

본 기능은 프라이버시 요건이 엄격한 나라에서 앱을 운영하는 경우에 유용합니다. URL 전략을 설정하면 Adjust가 선택된 데이터 레지던시 지역에 데이터를 저장하거나 선택된 도메인으로 트래픽을 전송합니다.

다음 파라미터와 함께 `AdjustConfig` 인스턴스에서 `setUrlStrategy` 메서드를 호출하여 데이터 레지던시 국가를 설정할 수 있습니다.

-  `urlStrategy` \(`string`\): SDK 트래픽을 전송할 데이터 레지던스 국가 또는 엔드포인트

| 값                               | 설명                                                                                                   |
| -------------------------------- | ------------------------------------------------------------------------------------------------------ |
| `AdjustConfig.DataResidencyEU`   | 데이터 레지던시 지역을 EU로 설정                                                                       |
| `AdjustConfig.DataResidencyTR`   | 데이터 레지던시 지역을 터키로 설정                                                                     |
| `AdjustConfig.DataResidencyUS`   | 데이터 레지던시 지역을 미국으로 설정                                                                   |
| `AdjustConfig.UrlStrategyChina`  | URL 전략을 `app.adjust.world` 도메인으로 설정합니다.                                                   |
| `AdjustConfig.UrlStrategyCn`     | URL 전략을 `app.adjust.cn` 도메인으로 설정합니다.                                                      |
| `AdjustConfig.UrlStrategyCnOnly` | URL 전략을 `app.adjust.cn` 도메인으로 설정하지만 요청 실패 시 다른 도메인으로 **되돌릴 수 없습니다** . |
| `AdjustConfig.UrlStrategyIndia`  | URL 전략을 `app.adjust.net.in` 도메인으로 설정합니다.                                                  |

<CodeBlock highlight="AdjustConfig.DataResidencyEU, {range: 5}">

```jsx
const adjustConfig = new AdjustConfig(
   "{YourAppToken}",
   AdjustConfig.EnvironmentSandbox,
);
adjustConfig.setUrlStrategy(AdjustConfig.DataResidencyEU);
Adjust.create(adjustConfig);
```

</CodeBlock>

## 특정 사용자에 대한 동의 측정 {#consent-measurement-for-specific-users}

<CodeBlock title="메서드 서명">

```ts
trackMeasurementConsent: (measurementConsent: boolean) => void
```

</CodeBlock>

Adjust 대시보드에서 [데이터 프라이버시 설정](https://help.adjust.com/ko/article/manage-data-collection-and-retention)을 사용하는 경우 Adjust SDK도 설정해야 합니다. 이는 동의 만료 기간이나 사용자 데이터 보유 기간 등의 설정을 포함합니다.

이 기능을 토글하려면 다음 인수로 `trackMeasurementConsent` 메서드를 호출합니다.

-  `consentMeasurement` \(`boolean`\): 동의 측정의 활성화\(`true`\) 또는 비활성화\(`false`\) 여부

이 기능이 활성화되면 SDK가 데이터 프라이버시 설정을 Adjust 서버로 전달합니다. Adjust 서버는 데이터 프라이버시 규칙을 사용자에게 적용합니다. Adjust SDK의 작동에는 문제가 없습니다.

```jsx
Adjust.trackMeasurementConsent(true);
```

## COPPA 준수 {#coppa-compliance}

<CodeBlock title="메서드 서명">

```ts
public setCoppaCompliantEnabled(coppaCompliantEnabled: boolean): void
```

</CodeBlock>

앱에서 COPPA\(Children's Online Privacy Protection Act, 어린이 온라인 개인정보 보호법\)를 준수해야 하는 경우 `setCoppaCompliantEnabled` 메서드를 호출합니다. 이 메서드는 다음을 수행합니다.

1. 사용자가 첫 번째 `session`을 시작하기 **전** 에 서드파티 공유가 비활성화됩니다.
2. SDK가 디바이스 ID와 광고 ID 읽는 것을 방지합니다\(예: `gps_adid` 및 `android_id`\).

```jsx
const adjustConfig = new AdjustConfig(
   "{YourAppToken}",
   AdjustConfig.EnvironmentSandbox,
);
//...
adjustConfig.setCoppaCompliantEnabled(true);
Adjust.create(adjustConfig);
```

이 메서드는 `false` 파라미터와 함께 호출하여 비활성화할 수 있습니다.

<Callout type="important">

`setCoppaCompliantEnabled` 메서드를 비활성화해도 서드파티 공유는 재활성화되지 _않습니다_ . 해당 사용자에 대한 [서드파티 공유 재활성화](#third-party-sharing-for-specific-users)는 별도의 설정이 필요합니다.

</Callout>

## 플레이 스토어 어린이용 앱 \(Android에만 해당\) {#play-store-kids-apps-android-only}

<CodeBlock title="메서드 서명">

```ts
public setPlayStoreKidsAppEnabled(playStoreKidsAppEnabled: boolean): void
```

</CodeBlock>

앱이 만 13세 미만 사용자를 타겟으로 하고 설치 지역이 미국이 **아닌** 경우 어린이용 앱으로 등록해야 합니다. 이렇게 하면 SDK가 디바이스 ID와 광고 ID 읽는 것을 방지합니다\(예: `gps_adid` 및 `android_id`\).

앱을 어린이용 앱으로 표시하려면 다음 인수로 `setPlayStoreKidsAppEnabled` 메서드를 호출합니다.

-  `playStoreKidsAppEnabled` \(`boolean`\): `true`로 설정하여 앱을 어린이용 앱으로 표시하거나 `false`로 설정하여 비어린이용 앱으로 표시합니다.

```jsx
const adjustConfig = new AdjustConfig(
   "{YourAppToken}",
   AdjustConfig.EnvironmentSandbox,
);
//...
adjustConfig.setPlayStoreKidsAppEnabled(true);
//...
Adjust.create(adjustConfig);
```
